# semantic-background

./: .file.json  .gitignore  LICENSE  LICENSE.ttl  README.md  annotations.trig  bfo.file.json  brick.file.json  catalogue-annotations.ttl  catalogue-ontologies.ttl  cs.file.json  csvw.file.json  data.file.json  dbo.file.json  dcam.file.json  dcat.file.json  default2.file.json  default3.file.json  default4.file.json  default6.file.json  default8.file.json  default9.file.json  degrees.file.json  doap.file.json  dwciri.file.json  event.file.json  ex.file.json  gml.file.json  grddl.file.json  iso-trs.file.json  manifest-annotations.ttl  manifest-ontologies.ttl  manifest.ttl  obo.file.json  odrl-lr.file.json  odrl.file.json  ontologies-catalogue.ttl  ontologies-manifest.ttl  org.file.json  owl.file.json  (+35 more)
annotations/: addr-annotations.ttl  agents-annotations.ttl  altr-ext-annotations.ttl  altrext-annotations.ttl  bfo-annotations.ttl  bfo2020-annotations.ttl  bibframe-annotations.ttl  bibo-annotations.ttl  cito-annotations.ttl  cn-annotations.ttl  data-roles-annotations.ttl  dc_elements-annotations.ttl  dcat-annotations.ttl  dcterms-annotations.ttl  dublin_core_elements-annotations.ttl  dwc-annotations.ttl  fabio-annotations.ttl  foaf-annotations.ttl  fsdf-themes-annotations.ttl  geo-annotations.ttl  geojson-annotations.ttl  gml-annotations.ttl  gn-annotations.ttl  gts2020-annotations.ttl  lifecycle-annotations.ttl  loc-identifiers-annotations.ttl  mrr-annotations.ttl  nil-annotations.ttl  odrl22-annotations.ttl  olis-annotations.ttl  owl-annotations.ttl  pav-annotations.ttl  (+34 more)
(+517 files in other folders)
