[tool.poetry]
name = "semantic-background"
version = "0.1.0"
description = "Semantic Web ontologies and vocabularies frequently used by members of KurrawongAI"
authors = ["Nicholas Car <nick@kurrawong.ai>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "semantic_background"}]

[tool.poetry.dependencies]
python = "^3.11"
rdflib = "^6.3.2"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
