[project]
name = "semantic-background"
version = "0.1.0"
description = "Semantic Web ontologies and vocabularies frequently used by members of KurrawongAI"
authors = ["Nicholas Car <nick@kurrawong.ai>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "semantic_background"}]
dependencies = [
    "rdflib>=7.5.0",
    "pytest>=8.3.3",
    "prezmanifest>=1.1.0",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
